selecting orders whose labels were not yet printed

--- a/src/main/webapp/backoffice/backoffice.css
+++ b/src/main/webapp/backoffice/backoffice.css
@@ -146,6 +146,10 @@ div.tab-selectors div.tab-selector{
 	padding : 2px;
 }
 
+#orderActions {
+	float: right;
+}
+
 #meals3 .orderAction {
 	text-decoration : underline;
 	color : blue;
