--- a/src/main/webapp/backoffice/order/list3/views/list3.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/list3.ejs
@@ -14,19 +14,24 @@
 		<span class="orderItemSelector">
 			<input id="orderItemSelectorAllCheckbox" type="checkbox" class="orderItemSelectorAllCheckbox">
 		</span>
+		<span class="orderAction">
+			<span id="orderItemSelectorNotPrinted">Select not Printed</span>
+		</span>
 
-		<span class="orderAction">
-			<span id="ordersActionButton" action="close">close</span>
-		</span>
-		|
-		<span class="orderAction">
-			<span id="ordersActionButton" action="delete">delete</span>
-		</span>
-		|
-		<span class="orderAction">
-			<span id="ordersActionButton" action="print">print labels</span>
-		</span>
-		 	
+		<div id="orderActions">
+			<span class="orderAction">
+				<span id="ordersActionButton" action="close">close</span>
+			</span>
+			|
+			<span class="orderAction">
+				<span id="ordersActionButton" action="delete">delete</span>
+			</span>
+			|
+			<span class="orderAction">
+				<span id="ordersActionButton" action="print">print labels</span>
+			</span>
+		</div>
+
 		<div style="clear : both;"></div>
 	</div>
 
