Sign-in and Registration

--- a/src/main/webapp/shop/auth/register/views/registerForm.ejs
+++ b/src/main/webapp/shop/auth/register/views/registerForm.ejs
@@ -23,7 +23,7 @@
 			class="required"
 			title="<%= msg( "common.form.required" ) %>"
 		>*</span></label>
-		<input type="text" name="email" id="<%= emailId %>" value="petr@me.com"/>
+		<input type="text" name="email" id="<%= emailId %>" value=""/>
 	</div>
 
 	<div class="input-form-buttons-row">
