--- a/src/main/webapp/shop/auth/signin/views/signinForm.ejs
+++ b/src/main/webapp/shop/auth/signin/views/signinForm.ejs
@@ -13,7 +13,7 @@
 			title="<%= msg( "common.form.required" ) %>"
 		>*</span></label>
 		<!--input type="text" name="email" id="<%= emailId %>" value="<%= email ? email : "" %>"/-->
-		<input type="text" name="email" id="<%= emailId %>" value="petr@me.com"/>
+		<input type="text" name="email" id="<%= emailId %>" value=""/>
 	</div>
 
 	<div class="input-form-buttons-row">
