--- a/src/main/webapp/backoffice/order/list3/views/list3.ejs
+++ b/src/main/webapp/backoffice/order/list3/views/list3.ejs
@@ -28,7 +28,7 @@
 			</span>
 			|
 			<span class="orderAction">
-				<span id="ordersActionButton" action="print">print labels</span>
+				<span id="printLabelsButton" >print labels</span>
 			</span>
 		</div>
 
