bug fixed... but only deployed on test instance

--- a/src/main/webapp/backoffice/label/print/views/layout.ejs
+++ b/src/main/webapp/backoffice/label/print/views/layout.ejs
@@ -18,7 +18,7 @@
 					<table class="label-layout" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="top-line-cell">
-								<div class="delivery-location"><%= order.deliveryLocation.name %></div>
+								<div class="delivery-location"><%= order.deliveryLocation.abbreviation %></div>
 								<div class="customer-name"><%= order.owner.firstName %> <%= order.owner.lastName %></div>
 							</td>
 						</tr>
