--- a/src/main/webapp/backoffice/printing.css
+++ b/src/main/webapp/backoffice/printing.css
@@ -31,7 +31,8 @@ body {
 
 .page {
 	width: 200mm; /* 210 x 2 */
-	height: 285mm; /* 297 x 2 */
+	height: 270mm; /* 297 x 2 */
+	padding-top : 15mm;
 	background-color: white;
 	white-space : nowrap;
 	border: 0px red solid;
@@ -46,7 +47,7 @@ body {
 	padding : 5mm;
 	width: 88mm;
 	//height: 39.25mm;
-	height: 47mm;
+	height: 32mm;
 	overflow : hidden;
 	float : left;
 	clear : none;
@@ -69,10 +70,10 @@ table.label-layout td{
 	white-space : nowrap;
 	overflow : hidden;
 	text-align : center;
-	font-size: 1.4em;
+	font-size: 1.3em;
 	//font-weight: bold;
-	line-height : 1.4em;
-	height : 40px;
+	line-height : 1.3em;
+	height : 25px;
 	border : 0px red solid;
 }
 
@@ -81,19 +82,19 @@ table.label-layout td{
 	white-space : nowrap;
 	overflow : hidden;	
 	text-align : center;
-	font-size: 1.4em;
+	font-size: 1.3em;
 	font-weight: bold;
 	line-height : 1.3em;
-	height : 30px;
+	height : 25px;
 	border : 0px red solid;
 }
 
 
 
 td.article-cell{
-	height : 50px;
-	font-size: 1.2em;
-	font-weight: bold;
+	height : 30px;
+	font-size: 1em;
+	Xfont-weight: bold;
 	text-align : center;
 	white-space: normal;
 	border : 0px red solid;
